<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/space_48">

    <LinearLayout
        android:id="@+id/bg_noclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogradis"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_60"
        android:paddingLeft="@dimen/space_59"
        android:paddingRight="@dimen/space_59"
        android:paddingTop="@dimen/space_29">

        <LinearLayout
            android:id="@+id/noclick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/space_48"
            android:paddingRight="@dimen/space_48">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:id="@+id/textView_titles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/space_1000"
                android:paddingBottom="@dimen/space_64"
                android:text="@string/txt_dialog_title"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="@dimen/font_66"
                app:font="Roboto_Bold" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />

        <LinearLayout
            android:id="@+id/layout_denngay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:id="@+id/text_denngay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.6"
                android:minWidth="@dimen/space_1000"
                android:paddingBottom="@dimen/space_64"
                android:paddingTop="@dimen/space_64"
                android:text="@string/txt_name"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Medium" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spn_name_pb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.4"
                android:background="@drawable/bg_spinner"
                android:paddingLeft="@dimen/space_29"></android.support.v7.widget.AppCompatSpinner>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e6e6e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.6"
                android:minWidth="@dimen/space_1000"
                android:paddingBottom="@dimen/space_64"
                android:paddingTop="@dimen/space_64"
                android:text="@string/txt_unit"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Medium" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spn_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.4"
                android:background="@drawable/bg_spinner"
                android:paddingLeft="@dimen/space_29">

            </android.support.v7.widget.AppCompatSpinner>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/space_1"
            android:background="#e6e6e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:minWidth="@dimen/space_1000"
                android:paddingBottom="@dimen/space_64"
                android:paddingTop="@dimen/space_64"
                android:text="@string/txt_price"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Medium" />

            <com.daniribalbert.customfontlib.views.CustomFontEditText
                android:id="@+id/edt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:background="@drawable/bg_input_type"
                android:hint="@string/txt_price"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="@dimen/space_32"
                android:paddingLeft="@dimen/space_60"
                android:paddingRight="@dimen/space_40"
                android:paddingTop="@dimen/space_32"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/space_1"
            android:background="#e6e6e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.daniribalbert.customfontlib.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:minWidth="@dimen/space_1000"
                android:paddingBottom="@dimen/space_64"
                android:paddingTop="@dimen/space_64"
                android:text="@string/txt_Quantity"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Medium" />

            <com.daniribalbert.customfontlib.views.CustomFontEditText
                android:id="@+id/edt_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:background="@drawable/bg_input_type"
                android:hint="@string/txt_Quantity"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="@dimen/space_32"
                android:paddingLeft="@dimen/space_60"
                android:paddingRight="@dimen/space_40"
                android:paddingTop="@dimen/space_32"
                android:textSize="@dimen/font_48"
                app:font="Roboto_Light" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/space_1"
            android:background="#e6e6e6" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_40"
            android:orientation="horizontal">

            <com.daniribalbert.customfontlib.views.CustomFontButton
                android:id="@+id/btn_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:paddingBottom="@dimen/space_21"
                android:paddingTop="@dimen/space_21"
                android:text="@string/txt_btn_dialog"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:font="Roboto_Bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>